resume section almost done, extra space needs to be fixed

--- a/src/app/components/pages/contact/contact.component.css
+++ b/src/app/components/pages/contact/contact.component.css
@@ -6,10 +6,11 @@
 	80% { -webkit-transform: translate(-1px, -1px) rotate(1deg); }
 }
 .contact-grid{
-    border: 1px dashed salmon;
+    /* border: 1px dashed salmon; */
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    margin-bottom: 50px;
 }
 .contact-icon-wrap{ 
   width: 130px;
@@ -45,13 +46,15 @@
   color: #0477BD;
 }
 .resume-container{
-  border: 1px dashed yellow;
+  /* border: 1px dashed yellow; */
   display: flex;
   justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 100px;
 }
 .resume{
   width: 300px;
-  height: 388px;
+  height: 389px;
   background-color: #1E1E1E;
   cursor: pointer;
   display: flex;
@@ -59,6 +62,19 @@
   align-items: center;
 }
 .resume img{
+  position: relative;
   width: 100%;
   height: 100%;
+  transition: all 0.2s linear;
+}
+.resume:hover img{
+  opacity: 0.1;
+}
+.resume-fa{
+  position: absolute;
+  opacity: 0;
+  transition: all 0.2s linear;
+}
+.resume:hover .resume-fa{
+  opacity: 1;
 }
