--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ body{
     margin: 0px;
 }
 .container{
-    border: 1px dashed red;
+    /* border: 1px dashed red; */
     width: 100%;
     display: flex;
     flex-direction: column;
